--- a/index.html
+++ b/index.html
@@ -14,7 +14,32 @@
 </head>
 
 <body>
-    <h1>Testing all</h1>
+    <!-- searce section  -->
+    <header class="container">
+        <h1 class="text-center my-3">phone-hunter</h1>
+        <div class="input-group w-50 mx-auto my-5">
+            <input id="input-fild" type="text" class="form-control" placeholder="Searce Your Favourite Phone" aria-describedby="button-addon2">
+            <button onclick="loadData()" class="btn btn-outline-secondary" type="button" id="button-addon2">Searce</button>
+        </div>
+    </header>
+
+    <main>
+        <!-- display all phone data  -->
+        <section class="container">
+            <div id="all-phone" class="row row-cols-1 row-cols-md-3 g-4">
+            </div>
+        </section>
+
+    </main>
+
+
+
+
+
+
+
+
+
     <!-- JavaScript link -->
     <script src="js/app.js"></script>
 
