single data display complied

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     </header>
 
     <main>
+        <!-- single data display  -->
+        <section id="single-phone" class="container my-5">
+        </section>
+
+
+
+
         <!-- display all phone data  -->
         <section class="container">
             <div id="all-phone" class="row row-cols-1 row-cols-md-3 g-4">
@@ -31,6 +38,12 @@
         </section>
 
     </main>
+
+    <!--  <p class="card-text">GPS : </p>
+    <p class="card-text">NFC : </p>
+    <p class="card-text">Radio: </p>
+    <p class="card-text">USB : </p>
+    <p class="card-text">WLAN : </p> -->
 
 
 
