error handaling complited

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <!-- searce section  -->
     <header class="container">
         <h1 class="text-center my-3">phone-hunter</h1>
@@ -24,8 +25,22 @@
     </header>
 
     <main>
+        <!-- error section  -->
+        <section>
+            <div id="error" class="w-50 mx-auto">
+                <button type="button" class="btn btn-lg btn-danger ">Data not Found </button>
+            </div>
+        </section>
+        <!--empty input fild error-->
+        <section>
+            <div id="empty-fild" class="w-50 mx-auto">
+                <button type="button" class="btn btn-lg btn-danger ">Please Give a value</button>
+            </div>
+        </section>
+
         <!-- single data display  -->
         <section id="single-phone" class="container my-5">
+
         </section>
 
 
@@ -38,17 +53,6 @@
         </section>
 
     </main>
-
-    <!--  <p class="card-text">GPS : </p>
-    <p class="card-text">NFC : </p>
-    <p class="card-text">Radio: </p>
-    <p class="card-text">USB : </p>
-    <p class="card-text">WLAN : </p> -->
-
-
-
-
-
 
 
 
