two error handaling complited

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <!-- error section  -->
+        <!-- data not found error section  -->
         <section>
             <div id="error" class="w-50 mx-auto">
                 <button type="button" class="btn btn-lg btn-danger ">Data not Found </button>
@@ -42,9 +42,6 @@
         <section id="single-phone" class="container my-5">
 
         </section>
-
-
-
 
         <!-- display all phone data  -->
         <section class="container">
