--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <!-- searce section  -->
     <header class="container">
-        <h1 class="text-center my-3">phone-hunter</h1>
+        <!-- name  -->
+        <h1 class="text-center mt-3"><span class="color">CHOOSE</span><span class="red">--</span><span class="orange">PHONE</span> </h1>
+        <!-- searce section  -->
         <div class="input-group w-50 mx-auto my-5">
             <input id="input-fild" type="text" class="form-control" placeholder="Searce Your Favourite Phone" aria-describedby="button-addon2">
             <button onclick="loadData()" class="btn btn-outline-secondary" type="button" id="button-addon2">Searce</button>
@@ -27,7 +29,7 @@
     <main>
         <!-- data not found error section  -->
         <section>
-            <div id="error" class="w-50 mx-auto">
+            <div id="error" class="w-50 mx-auto my-3">
                 <button type="button" class="btn btn-lg btn-danger ">Data not Found </button>
             </div>
         </section>
@@ -40,13 +42,11 @@
 
         <!-- single data display  -->
         <section id="single-phone" class="container my-5">
-
         </section>
 
         <!-- display all phone data  -->
         <section class="container">
-            <div id="all-phone" class="row row-cols-1 row-cols-md-3 g-4">
-            </div>
+            <div id="all-phone" class="row row-cols-1 row-cols-md-3 g-4"></div>
         </section>
 
     </main>
@@ -56,7 +56,6 @@
 
     <!-- JavaScript link -->
     <script src="js/app.js"></script>
-
 </body>
 
 </html>
