--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>phone-hunter</title>
+    <title>phone-finder</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,7 +18,7 @@
     <!-- searce section  -->
     <header class="container">
         <!-- name  -->
-        <h1 class="text-center mt-3"><span class="color">CHOOSE</span><span class="red">--</span><span class="orange">PHONE</span> </h1>
+        <h1 class="text-center mt-3"><span class="color">PHONE</span><span class="red">--</span><span class="orange">FINDER</span> </h1>
         <!-- searce section  -->
         <div class="input-group w-50 mx-auto my-5">
             <input id="input-fild" type="text" class="form-control" placeholder="Searce Your Favourite Phone" aria-describedby="button-addon2">
