--- a/index.html
+++ b/index.html
@@ -15,15 +15,24 @@
 
 <body>
 
-    <!-- searce section  -->
     <header class="container">
         <!-- name  -->
-        <h1 class="text-center mt-3"><span class="color">PHONE</span><span class="red">--</span><span class="orange">FINDER</span> </h1>
+        <h1 class="text-center mt-3"><span class="color fw-bolder">P</span>HONE <span class=" fw-bolder">-</span> <span class="orange fw-bolder">F</span>INDER </h1>
+
+
         <!-- searce section  -->
         <div class="input-group w-50 mx-auto my-5">
             <input id="input-fild" type="text" class="form-control" placeholder="Searce Your Favourite Phone" aria-describedby="button-addon2">
             <button onclick="loadData()" class="btn btn-outline-secondary" type="button" id="button-addon2">Searce</button>
         </div>
+        <!-- spinner section  -->
+        <section id="spinner" class="container">
+            <div class="d-flex justify-content-center">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
     </header>
 
     <main>
